src/test/deca/codegen/valid/decl_null.deca
// Description:
//    déclaration d'une variable null
//
// Resultats:
//    ok
//    ok
//
// Historique:
//    cree le 01/01/2023

{
   int x = null;
   print(x);
}


