src/test/deca/codegen/error/test_div_0_int.deca
// Description:
//    lecture eronné d'un int
//
// Resultats:
//    Error: Input/Output error
//
//
// Historique:
//    cree le 01/01/2023
{
    println(5/0);
}


